--- a/ScrumWeb/Views/Iterations/Index.cshtml
+++ b/ScrumWeb/Views/Iterations/Index.cshtml
@@ -16,20 +16,27 @@
 </div>
 <br />
 @*INTRO SECTION END*@
-<table class="table">
+<table class="table" id="iterationsTable">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.IterationName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IterationDescription)
-        </th>
-        <th></th>
+        @if (Model.Count() == 0)
+        {
+            <th>No iterations have been created yet...</th>
+        }
+        else
+        {
+            <th>
+                @Html.DisplayNameFor(model => model.IterationName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IterationDescription)
+            </th>
+            <th></th>
+        }
     </tr>
 
     @foreach (var item in Model)
     {
-        <tr>
+        <tr id="@item.IterationID">
             <td>
                 @Html.DisplayFor(modelItem => item.IterationName)
             </td>
@@ -37,11 +44,16 @@
                 @Html.DisplayFor(modelItem => item.IterationDescription)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.IterationID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.IterationID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.IterationID })
+                <a title="Edit iteration" class="actionLinksBtn" href="@Url.Action("Edit", "Iterations", new { id = item.IterationID })">
+                    <i class="fas fa-edit"></i>
+                </a>
+                <a title="Show iteration details" class="actionLinksBtn" href="@Url.Action("Details", "Iterations", new { id = item.IterationID })">
+                    <i class="fas fa-info"></i>
+                </a>
+                <a title="Delete iteration" class="actionLinksBtn" onclick="DeleteIteration('@item.IterationID')">
+                    <i class="fas fa-trash-alt"></i>
+                </a>
             </td>
         </tr>
     }
-
 </table>
