--- a/ScrumWeb/Views/Tasks/Index.cshtml
+++ b/ScrumWeb/Views/Tasks/Index.cshtml
@@ -105,18 +105,25 @@
 <h2>BACKLOG ITEMS</h2>
 <br />
 
-<table class="table">
+<table class="table" id="tasksTable">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.TaskName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TaskDescription)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TaskStatus)
-        </th>
-        <th></th>
+        @if (Model.Count() == 0)
+        {
+            <th>No backlog items have been created yet...</th>
+        }
+        else
+        {
+            <th>
+                @Html.DisplayNameFor(model => model.TaskName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TaskDescription)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TaskStatus)
+            </th>
+            <th></th>
+        }
     </tr>
 
     @foreach (var item in Model.Where(m => m.TaskStatus == "BACKLOGITEM"))
@@ -149,4 +156,3 @@
 <br />
 <br />
 }
-<script src="~/Scripts/main.js"></script>
