Titels remove and changed

--- a/ScrumWeb/Views/Iterations/Details.cshtml
+++ b/ScrumWeb/Views/Iterations/Details.cshtml
@@ -28,6 +28,13 @@
             @Html.DisplayFor(model => model.IterationDescription)
         </dd>
 
+        <dt>
+            Project Name:
+        </dt>
+
+        @*<dd>
+            @Html.DisplayFor(model => model.IterationProject)
+        </dd>*@
     </dl>
 </div>
 <p>
