--- a/ScrumWeb/Views/Projects/Edit.cshtml
+++ b/ScrumWeb/Views/Projects/Edit.cshtml
@@ -6,7 +6,7 @@
 }
 <br />
 <br />
-<h2>Edit</h2>
+@*<h2>Edit</h2>*@
 
 
 @using (Html.BeginForm())
@@ -14,7 +14,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Projects</h4>
+        <h4>Edit Project</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ProjectID)
