--- a/ScrumWeb/Views/Tasks/Create.cshtml
+++ b/ScrumWeb/Views/Tasks/Create.cshtml
@@ -4,8 +4,9 @@
     ViewBag.Title = "Create new task";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Create</h2>
+<br />
+<br />
+@*<h2>Create</h2>*@
 
 
 @using (Html.BeginForm()) 
@@ -13,7 +14,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Tasks</h4>
+    <h4>Create Task</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
