--- a/ScrumWeb/Views/Projects/Index.cshtml
+++ b/ScrumWeb/Views/Projects/Index.cshtml
@@ -21,7 +21,7 @@
     <tr>
         @if (Model.Count() == 0)
         {
-            <th>No backlog items have been created yet...</th>
+            <th>No projects have been created yet...</th>
         }
         else
         {
