--- a/ScrumWeb/Views/Tasks/Index.cshtml
+++ b/ScrumWeb/Views/Tasks/Index.cshtml
@@ -28,10 +28,10 @@
     <h2 class="col-sm-4" style="text-align: center;">DONE</h2>
 </div>
 <div class="row">
-    <div class="empty col-sm-4 todoColumn">
+    <div class="empty col-sm-4 todoColumn" id="todoColumn">
         @foreach (var item in Model.Where(m => m.TaskStatus == "TODO"))
         {
-            <div class="fill" draggable="true" id="@item.TaskID" data-status="@item.TaskStatus">
+            <div class="fill" draggable="true" id="@item.TaskID" data-status="@item.TaskStatus" data-user="@item.TaskAssignedToUser">
                 <textarea name="" rows="4" cols="30" title="@item.TaskDescription">@item.TaskName</textarea>
                 <div class="actionLinks">
                     <a title="Save task" class="actionLinksBtn" onclick="SaveTaskWithAjax()">
@@ -40,9 +40,6 @@
                     <a title="Edit task" class="actionLinksBtn" href="@Url.Action("Edit", "Tasks", new { id = item.TaskID })">
                         <i class="fas fa-edit"></i>
                     </a>
-                    @*<a title="Show task details" class="actionLinksBtn" href="@Url.Action("Details", "Tasks", new { id = item.TaskID })">
-                        <i class="fas fa-info"></i>
-                    </a>*@
                     <a title="Delete task" class="actionLinksBtn" onclick="DeleteTask('@item.TaskID')">
                         <i class="fas fa-trash-alt"></i>
                     </a>
@@ -51,10 +48,10 @@
         }
     </div>
 
-    <div class="empty col-sm-4 inprogressColumn">
+    <div class="empty col-sm-4 inprogressColumn" id="inprogressColumn">
         @foreach (var item in Model.Where(m => m.TaskStatus == "INPROGRESS"))
         {
-            <div class="fill" draggable="true" id="@item.TaskID" data-status="@item.TaskStatus">
+            <div class="fill" draggable="true" id="@item.TaskID" data-status="@item.TaskStatus" data-user="@item.TaskAssignedToUser">
                 <textarea name="" rows="4" cols="30" title="@item.TaskDescription" class="taskText">@item.TaskName</textarea>
                 <div class="actionLinks">
                     <a title="Save task" class="actionLinksBtn" onclick="SaveTaskWithAjax()">
@@ -63,9 +60,6 @@
                     <a title="Edit task" class="actionLinksBtn" href="@Url.Action("Edit", "Tasks", new { id = item.TaskID })">
                         <i class="fas fa-edit"></i>
                     </a>
-                    @*<a title="Show task details" class="actionLinksBtn" href="@Url.Action("Details", "Tasks", new { id = item.TaskID })">
-                        <i class="fas fa-info"></i>
-                    </a>*@
                     <a title="Delete task" class="actionLinksBtn" onclick="DeleteTask('@item.TaskID')">
                         <i class="fas fa-trash-alt"></i>
                     </a>
@@ -74,10 +68,10 @@
         }
     </div>
 
-    <div class="empty col-sm-4 doneColumn">
+    <div class="empty col-sm-4 doneColumn" id="doneColumn">
         @foreach (var item in Model.Where(m => m.TaskStatus == "DONE"))
         {
-            <div class="fill" draggable="true" id="@item.TaskID" data-status="@item.TaskStatus">
+            <div class="fill" draggable="true" id="@item.TaskID" data-status="@item.TaskStatus" data-user="@item.TaskAssignedToUser">
                 <textarea name="" rows="4" cols="30" title="@item.TaskDescription">@item.TaskName</textarea>
                 <div class="actionLinks">
                     <a title="Save task" class="actionLinksBtn" onclick="SaveTaskWithAjax()">
@@ -86,9 +80,6 @@
                     <a title="Edit task" class="actionLinksBtn" href="@Url.Action("Edit", "Tasks", new { id = item.TaskID })">
                         <i class="fas fa-edit"></i>
                     </a>
-                    @*<a title="Show task details" class="actionLinksBtn" href="@Url.Action("Details", "Tasks", new { id = item.TaskID })">
-                        <i class="fas fa-info"></i>
-                    </a>*@
                     <a title="Delete task" class="actionLinksBtn" onclick="DeleteTask('@item.TaskID')">
                         <i class="fas fa-trash-alt"></i>
                     </a>
