--- a/ScrumWeb/Views/Iterations/Create.cshtml
+++ b/ScrumWeb/Views/Iterations/Create.cshtml
@@ -44,7 +44,9 @@
         <div class="form-group">
             <label class="control-label col-md-2">Select Project:</label>
             <div class="col-md-10">
-                @Html.DropDownList("AllProjects", (IEnumerable<SelectListItem>)ViewData["AllProjects"])
+                @Html.DropDownListFor(model => model.IterationProjectID, (IEnumerable<SelectListItem>)ViewBag.Projects, new { htmlAttributes = new { @class = "form-control" } })
+                @*@Html.DropDownList("AllProjects", (IEnumerable<SelectListItem>)ViewData["AllProjects"])*@
+                @*@Html.DropDownListFor(m => m.IterationProjectID, (IEnumerable<SelectListItem>)ViewData["AllProjects"])*@
             </div>
         </div>
 
