--- a/ScrumWeb/Views/Tasks/Create.cshtml
+++ b/ScrumWeb/Views/Tasks/Create.cshtml
@@ -38,11 +38,19 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.TaskDescription, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.TaskStatus, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownListFor(model => model.TaskStatus, new SelectList(
            new List<Object> { new { value = "BACKLOGITEM", text = "BACKLOGITEM" }, new { value = "TODO", text = "TODO" }, new { value = "INPROGRESS", text = "IN PROGRESS" }, new { value = "DONE", text = "DONE" } }, "value", "text", 2), new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.TaskStatus, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.TaskAssignedToUser, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.TaskAssignedToUser, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.TaskAssignedToUser, "", new { @class = "text-danger" })
         </div>
     </div>
 
