--- a/ScrumWeb/Views/Tasks/Edit.cshtml
+++ b/ScrumWeb/Views/Tasks/Edit.cshtml
@@ -44,13 +44,21 @@
         </div>
     </div>
 
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.LabelFor(model => model.TaskAssignedToUser, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.TaskAssignedToUser, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.TaskAssignedToUser, "", new { @class = "text-danger" })
         </div>
+    </div>*@
+
+    <div class="form-group">
+        <label class="control-label col-md-2">Assign User:</label>
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.TaskAssignedToUser, (IEnumerable<SelectListItem>)ViewData["AllUsers"], new { htmlAttributes = new { @class = "form-control" } })
+        </div>
     </div>
+
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
