--- a/ScrumWeb/Views/Tasks/Create.cshtml
+++ b/ScrumWeb/Views/Tasks/Create.cshtml
@@ -46,18 +46,17 @@
         </div>
     </div>
 
-    @*<div class="form-group">
-        @Html.LabelFor(model => model.TaskAssignedToUser, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.TaskAssignedToUser, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.TaskAssignedToUser, "", new { @class = "text-danger" })
-        </div>
-    </div>*@
-
     <div class="form-group">
         <label class="control-label col-md-2">Assign User:</label>
         <div class="col-md-10">
             @Html.DropDownListFor(model => model.TaskAssignedToUser, (IEnumerable<SelectListItem>)ViewBag.Users, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2">Iteration:</label>
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.IterationID, (IEnumerable<SelectListItem>)ViewBag.Iterations, new { htmlAttributes = new { @class = "form-control" } })
         </div>
     </div>
 
