--- a/ScrumWeb/Views/Tasks/Edit.cshtml
+++ b/ScrumWeb/Views/Tasks/Edit.cshtml
@@ -44,13 +44,12 @@
         </div>
     </div>
 
-    @*<div class="form-group">
-        @Html.LabelFor(model => model.TaskAssignedToUser, htmlAttributes: new { @class = "control-label col-md-2" })
+    <div class="form-group">
+        <label class="control-label col-md-2">Assign User:</label>
         <div class="col-md-10">
-            @Html.EditorFor(model => model.TaskAssignedToUser, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.TaskAssignedToUser, "", new { @class = "text-danger" })
+            @Html.DropDownListFor(model => model.IterationID, (IEnumerable<SelectListItem>)ViewData["AllIterations"], new { htmlAttributes = new { @class = "form-control" } })
         </div>
-    </div>*@
+    </div>
 
     <div class="form-group">
         <label class="control-label col-md-2">Assign User:</label>
