--- a/ScrumWeb/Views/Tasks/Edit.cshtml
+++ b/ScrumWeb/Views/Tasks/Edit.cshtml
@@ -39,13 +39,13 @@
         @Html.LabelFor(model => model.TaskDescription, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownListFor(model => model.TaskStatus, new SelectList(
-           new List<Object> { new { value = "BACKLOGITEM", text = "BACKLOGITEM" }, new { value = "TODO", text = "TODO" }, new { value = "INPROGRESS", text = "IN PROGRESS" }, new { value = "DONE", text = "DONE" } }, "value", "text", 2), new { @class = "form-control" })
+           new List<Object> { new { value = "BACKLOGITEM", text = "BACKLOGITEM" }, new { value = "TODO", text = "TODO" }, new { value = "INPROGRESS", text = "IN PROGRESS" }, new { value = "DONE", text = "DONE" }, new { value = "FINISHED", text = "FINISHED" } }, "value", "text", 2), new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.TaskStatus, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        <label class="control-label col-md-2">Assign User:</label>
+        <label class="control-label col-md-2">Choose Iteration:</label>
         <div class="col-md-10">
             @Html.DropDownListFor(model => model.IterationID, (IEnumerable<SelectListItem>)ViewData["AllIterations"], new { htmlAttributes = new { @class = "form-control" } })
         </div>
