Overlap check added to edit iteration

--- a/ScrumWeb/Views/Iterations/Edit.cshtml
+++ b/ScrumWeb/Views/Iterations/Edit.cshtml
@@ -42,6 +42,8 @@
         </div>
     </div>
 
+    @Html.ValidationSummary(true)
+
     <div class="form-group">
         @Html.LabelFor(model => model.IterationStartDate, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
