Prompt to create ew template iteration when current iteration expires. Work started to move current iterations tasks to next iteration and to finished tasks log.

--- a/ScrumWeb/Views/Tasks/Index.cshtml
+++ b/ScrumWeb/Views/Tasks/Index.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Tasks: " + User.Identity.Name;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<input hidden id="currentIteration" value="@ViewBag.CurrentIterationEndDate">
 @*INTRO SECTION START*@
 <br />
 <br />
