--- a/ScrumWeb/Views/Iterations/Edit.cshtml
+++ b/ScrumWeb/Views/Iterations/Edit.cshtml
@@ -22,7 +22,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.IterationName, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.IterationName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.IterationName, new { htmlAttributes = new { @class = "form-control createEditInput" } })
             @Html.ValidationMessageFor(model => model.IterationName, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -30,7 +30,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.IterationDescription, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.IterationDescription, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.IterationDescription, new { htmlAttributes = new { @class = "form-control createEditInput" } })
             @Html.ValidationMessageFor(model => model.IterationDescription, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -64,15 +64,15 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Save" class="btn btn-success" />
         </div>
     </div>
 </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+<a title="Back to list" class="actionLinksBtn" href="/Iterations" style="color: #6c757d;font-size:50px;margin-left:16px;">
+    <i class="fas fa-long-arrow-alt-left"></i>
+</a>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
