--- a/ScrumWeb/Views/Tasks/Create.cshtml
+++ b/ScrumWeb/Views/Tasks/Create.cshtml
@@ -24,7 +24,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.TaskName, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.TaskName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.TaskName, new { htmlAttributes = new { @class = "form-control createEditInput" } })
             @Html.ValidationMessageFor(model => model.TaskName, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -32,7 +32,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.TaskDescription, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.TaskDescription, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.TaskDescription, new { htmlAttributes = new { @class = "form-control createEditInput" } })
             @Html.ValidationMessageFor(model => model.TaskDescription, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -49,7 +49,7 @@
     <div class="form-group">
         <label class="control-label col-md-2">Assign User:</label>
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.TaskAssignedToUser, (IEnumerable<SelectListItem>)ViewBag.Users, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.DropDownListFor(model => model.TaskAssignedToUser, (IEnumerable<SelectListItem>)ViewBag.Users, new { htmlAttributes = new { @class = "form-control createEditInput" } })
         </div>
     </div>
 
@@ -62,15 +62,15 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Create" class="btn btn-success" />
         </div>
     </div>
 </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+<a title="Back to list" class="actionLinksBtn" href="/Tasks" style="color: #6c757d;font-size:50px;margin-left:16px;">
+    <i class="fas fa-long-arrow-alt-left"></i>
+</a>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
